OO-531: fix z-index in tag element which appear under modal dialog

--- a/src/main/webapp/static/themes/openolat/_thirdparty.scss
+++ b/src/main/webapp/static/themes/openolat/_thirdparty.scss
@@ -71,6 +71,9 @@
 		background-color: $basecolor_ultra_light;
 	}
 }
+.ui-autocomplete {
+	z-index: 10000;
+}
 
 /*
  * datepicker
